Why isn't flask built in the home directory?
Why is everyone so obsessed with installing things instead of just
USING THEM AS EXTERNAL LIBRARIES???

--- a/server/templates/login.html
+++ b/server/templates/login.html
@@ -4,7 +4,6 @@
 	    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.6.0/semantic.css">
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.6.0/semantic.js"></script>
 	    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
-
     </head>
     <body>
         {% include "menu.html" %}
@@ -15,7 +14,7 @@
                     <input type="text" name="username" placeholder="Username">
                 </div>
                 <br>
-                <div style="height: .5em;"></div>
+                <div style="height: 0.5em;"></div>
                 <div class="ui input">
                     <input type="password" name="password" placeholder="Password">
                 </div>
