--- a/server/templates/menu.html
+++ b/server/templates/menu.html
@@ -1,5 +1,5 @@
 <div style="margin: auto; width: 50vw; text-align: center;">
-    <div style="height: .5em;"></div>
+    <div style="height: 0.5em;"></div>
         <div class="ui four item teal menu" style="width: 50vw;">
             <a class="item" href="/">Scoutmaster <b>9001</b></a>
             <a class="item" href="/teams">Teams</a>
